[gd_scene load_steps=3 format=3 uid="uid://brqub82ih38y8"]

[ext_resource type="Script" uid="uid://diaweih7hohq" path="res://client/activate/activate.gd" id="1_7ub5c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eomiu"]
bg_color = Color(0.941176, 1, 0.941176, 0.392157)
shadow_color = Color(0.941176, 1, 0.941176, 0.196078)
shadow_size = 3
shadow_offset = Vector2(2, 2)

[node name="Activate" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eomiu")
script = ExtResource("1_7ub5c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Activate Account"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Activation Code:"
horizontal_alignment = 2

[node name="UserNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Activation Code"

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "This is error text"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ActivateButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Activate"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Cancel"
