extends PanelContainer

@onready var name_line_edit := $MarginContainer/VBoxContainer/GridContainer/UserNameLineEdit
@onready var error_label := $MarginContainer/VBoxContainer/ErrorLabel
@onready var activate_button := $MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/ActivateButton
@onready var cancel_button := $MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/CancelButton
